--- a/Opinio/www/index.html
+++ b/Opinio/www/index.html
@@ -66,31 +66,46 @@
     <ion-side-menus enable-menu-with-back-views="true">
         <ion-side-menu side="left">
             <ion-header-bar>
-                <h1 class="title">Navigation</h1>
+                <h1 class="title">Opinio</h1>
             </ion-header-bar>
             <ion-content has-header="true" class="widget">
                 <ion-list class="widget" data-uib="ionic/list">
-                    <ion-item class="item widget" href="#/" ng-click="toggleLeft()" data-uib="ionic/list_item">Home</ion-item>
+                    <ion-item class="item widget" data-uib="ionic/list_item">My Profile</ion-item>
                 </ion-list>
                 <ion-list class="widget" data-uib="ionic/list">
-                    <ion-item class="item widget" ng-click="display.alert('Developing innovative solutions for everyone!', 'Reinsys.com')" data-uib="ionic/list_item">About</ion-item>
+                    <ion-item class="item widget" data-uib="ionic/list_item">Favorites</ion-item>
+                </ion-list>
+                <ion-list class="widget" data-uib="ionic/list">
+                    <ion-item class="item widget" data-uib="ionic/list_item">Setting</ion-item>
+                </ion-list>
+                <ion-list class="widget" data-uib="ionic/list">
+                    <ion-item class="item widget" data-uib="ionic/list_item">Privacy</ion-item>
+                </ion-list>
+                <ion-list class="widget" data-uib="ionic/list">
+                    <ion-item class="item widget" data-uib="ionic/list_item">Contact Us</ion-item>
+                </ion-list>
+                <ion-list class="widget" data-uib="ionic/list">
+                    <ion-item class="item widget" ng-click="display.goToPath('/welcome'); toggleLeft();" data-uib="ionic/button">Log Out</ion-item>
                 </ion-list>
             </ion-content>
         </ion-side-menu>
         <ion-side-menu-content>
-            <ion-nav-bar>
-                <ion-nav-back-button class="button-clear">
-                    <i class="ion-arrow-left-c"></i> Back
-                </ion-nav-back-button>
-                <ion-nav-buttons side="left">
-                    <!-- Toggle left side menu -->
-                    <button menu-toggle="left" class="button button-icon icon widget ion ion-navicon" data-uib="ionic/button"></button>
-                </ion-nav-buttons>
-                <ion-nav-buttons side="right">
-                    <!-- Toggle left side menu -->
-                    <button class="button button-icon icon widget ion ion-search" data-uib="ionic/button" ng-click="display.goToPath('/search')"></button>
-                </ion-nav-buttons>
-            </ion-nav-bar>
+                <ion-nav-bar>
+                    <ion-nav-back-button class="button-clear">
+                        <i class="ion-arrow-left-c"></i> Back
+                    </ion-nav-back-button>
+                    <ion-nav-buttons side="left">
+                        <!-- Toggle left side menu -->
+                        <button menu-toggle="left" class="button button-icon icon widget ion ion-navicon" data-uib="ionic/button"></button>
+                    </ion-nav-buttons>
+                    <ion-nav-buttons side="right">
+
+                        <button class="button" data-uib="ionic/button">Home</button>
+                        <button class="button" data-uib="ionic/button">Top</button>
+
+                    </ion-nav-buttons>
+                </ion-nav-bar>
+           
             <ion-nav-view name="index"></ion-nav-view>
         </ion-side-menu-content>
     </ion-side-menus>
