--- a/Opinio/www/views.html
+++ b/Opinio/www/views.html
@@ -13,42 +13,18 @@
 
   <body ng-app="myApp">
 
-    <div class="upage vertical-col left hidden" id="page-search">
-      <ion-view view-title="Search Page">
+    <div class="upage vertical-col left hidden" id="pre-login">
+      <ion-view hide-nav-bar="true">
         <ion-content>
-          <div class="grid grid-pad urow uib_row_1 row-height-1" data-uib="layout/row" data-ver="0">
-            <div class="col uib_col_1 col-0_12-12" data-uib="layout/col" data-ver="0">
-              <div class="widget-container content-area vertical-col">
-                <label class="item item-input widget uib_w_21 d-margins" data-uib="ionic/input" data-ver="0">
-                  <i class="icon ion-ios7-search ion placeholder-icon"></i>
-                  <input type="search" placeholder="Search">
-                </label>
-                <ion-list class="widget uib_w_28 d-margins" data-uib="ionic/list" data-ver="0">
-                  <ion-item class="item widget uib_w_29" data-uib="ionic/list_item" data-ver="0">List item 1</ion-item>
-                  <ion-item class="item widget uib_w_30" data-uib="ionic/list_item" data-ver="0">List item 2</ion-item>
-                  <ion-item class="item widget uib_w_31" data-uib="ionic/list_item" data-ver="0">List item 3</ion-item>
-                  <ion-item class="item widget uib_w_31" data-uib="ionic/list_item" data-ver="0">List item 4</ion-item>
-                  <ion-item class="item widget uib_w_31" data-uib="ionic/list_item" data-ver="0">List item 5</ion-item>
-                  <ion-item class="item widget uib_w_31" data-uib="ionic/list_item" data-ver="0">List item 6</ion-item>
-                  <ion-item class="item widget uib_w_31" data-uib="ionic/list_item" data-ver="0">List item 7</ion-item>
-                  <ion-item class="item widget uib_w_31" data-uib="ionic/list_item" data-ver="0">List item 8</ion-item>
-                  <ion-item class="item widget uib_w_31" data-uib="ionic/list_item" data-ver="0">List item 9</ion-item>
-                  <ion-item class="item widget uib_w_31" data-uib="ionic/list_item" data-ver="0">List item 10</ion-item>
-                  <ion-item class="item widget uib_w_31" data-uib="ionic/list_item" data-ver="0">List item 11</ion-item>
-                  <ion-item class="item widget uib_w_31" data-uib="ionic/list_item" data-ver="0">List item 12</ion-item>
-                  <ion-item class="item widget uib_w_31" data-uib="ionic/list_item" data-ver="0">List item 13</ion-item>
-                  <ion-item class="item widget uib_w_31" data-uib="ionic/list_item" data-ver="0">List item 14</ion-item>
-                  <ion-item class="item widget uib_w_31" data-uib="ionic/list_item" data-ver="0">List item 15</ion-item>
-                </ion-list>
-              </div>
+            <div class="bar bar-header bar-royal">
+                <h1 class="title">Opinio</h1>
             </div>
-            <span class="uib_shim"></span>
-          </div>
+            <img class="full-image" src="images/Strabburg.jpg">
         </ion-content>
       </ion-view>
     </div>
     <div class="upage vertical-col left hidden" id="page-index">
-      <ion-view view-title="Home Page">
+      <ion-view>
         <ion-content>
           <div class="grid grid-pad urow uib_row_2 row-height-2" data-uib="layout/row" data-ver="0">
             <div class="col uib_col_2 col-0_12-12" data-uib="layout/col" data-ver="0">
@@ -69,7 +45,7 @@
         <ion-footer-bar class="bar inner-element uib_w_4 bar-light bar-footer" data-uib="ionic/footer" data-ver="0">
           <div class="buttons widget-container content-area horiz-area wrapping-col">
           </div>
-          <h1 class="title">Powered by Reinsys</h1>
+          <h1 class="title"></h1>
           <div class="buttons widget-container content-area horiz-area wrapping-col">
           </div>
         </ion-footer-bar>
