$http fixed and services splited

--- a/Opinio/www/index.html
+++ b/Opinio/www/index.html
@@ -56,7 +56,8 @@
     <script type="application/javascript" src="scripts/index_init_services.js"></script>
     <script type="application/javascript" src="scripts/controllers.js"></script>
     <script type="application/javascript" src="scripts/services.js"></script>
-    <script type="application/javascript" src="scripts/pluginsFactory.js"></script>
+    <script type="application/javascript" src="scripts/postService.js"></script>
+    <script type="application/javascript" src="scripts/loginService.js"></script>
 
 </head>
 
