--- a/Opinio/www/index.html
+++ b/Opinio/www/index.html
@@ -95,7 +95,7 @@
                     <ion-item class="item widget" ng-click="display.goToPath('/welcome'); toggleLeft();" data-uib="ionic/button">Log Out</ion-item>
                 </ion-list>
                 <ion-list class="widget" data-uib="ionic/list">
-                    <ion-item class="item widget" ng-click="getDeviceID()" data-uib="ionic/list_item">TryYourFunc</ion-item>
+                    <ion-item class="item widget" ng-click="login()" data-uib="ionic/list_item">TryYourFunc</ion-item>
                 </ion-list>
             </ion-content>
         </ion-side-menu>
